# nasa_testovoe

./: .gitignore  README.md  main.py  pyproject.toml  req.pip
config/: settings.py  urls.py
slider/: admin.py  apps.py  models.py  views.py
slider/migrations/: 0001_initial.py
slider/templates/slider/: index.html
static/css/: main.css
static/js/: main.js
templates/: base.html
